app-tls/manifests/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mygateway
  namespace: sample
spec:
  selector:
    istio: ingress # use istio default ingress gateway
  servers:
  - port:
      number: 443
      name: https-helloworld
      protocol: HTTPS
    tls:
      mode: MUTUAL
      credentialName: helloworld-credential
    hosts:
    - helloworld.example.com
